--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -71,11 +71,11 @@ header.header
         +svg('logo')
       .header__togglers
         block btns
-          button.header__btn.header__btn_type_toggler.text-uppercase.mr-3(type="button" data-target="#categories")
+          button.header__btn.header__btn_type_toggler.mr-3(type="button" data-target="#categories")
             +icon('menu','header__btn-icon header__btn-icon_show')
             +icon('close','header__btn-icon header__btn-icon_close')
             span.header__btn-title Каталог
-          button.header__btn.header__btn_type_toggler.text-uppercase(type="button" data-target="#services")
+          button.header__btn.header__btn_type_toggler(type="button" data-target="#services")
             +icon('services','header__btn-icon header__btn-icon_show')
             +icon('close','header__btn-icon header__btn-icon_close')
             span.header__btn-title Услуги
@@ -346,8 +346,7 @@ header.header
               span.header__navbar-caption Вход | регистрация
           .header__aside
             a.header__btn.header__btn_place_panel(href="#")
-              span.header__btn-icon.header__btn-icon_type_holder
-                +icon('cart')
+              +icon('cart','header__btn-icon')
               span.header__btn-title Корзина
 
 nav.topmenu
