support/добавить новые иконки

--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -54,6 +54,8 @@ block wrapper
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('eye')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('facebook-filled')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('facebook')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('favourite')
@@ -63,6 +65,8 @@ block wrapper
           +svg('founding')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('gift')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('instagram-filled')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('instagram')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
@@ -126,6 +130,8 @@ block wrapper
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('user')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('vk-filled')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('vk')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('wapp-filled')
@@ -135,6 +141,8 @@ block wrapper
           +svg('wheels')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('winter')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('youtube-filled')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('youtube')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
@@ -181,6 +189,14 @@ block wrapper
           +svg('services-wheel-painted')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('services-vin')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('twitter-filled')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('twitter')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('drive2-filled')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('drive2')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -229,6 +245,8 @@ block wrapper
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-eye
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-facebook-filled
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-facebook
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-favourite
@@ -240,6 +258,8 @@ block wrapper
             span.path2
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-gift
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-instagram-filled
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-instagram
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
@@ -311,6 +331,8 @@ block wrapper
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-user
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-vk-filled
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-vk
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-wapp-filled
@@ -320,6 +342,8 @@ block wrapper
           span.h1.ds-icon-wheels
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-winter
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-youtube-filled
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-youtube
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
@@ -366,5 +390,13 @@ block wrapper
           span.h1.ds-icon-services-wheel-painted
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-services-vin
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-twitter-filled
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-twitter
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-drive2-filled
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-drive2
 
 block footer
