--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -23,76 +23,84 @@ $ds-icon-credit: "\e912";
 $ds-icon-delivery: "\e913";
 $ds-icon-desc: "\e914";
 $ds-icon-detail: "\e915";
-$ds-icon-dropdown: "\e916";
-$ds-icon-edit: "\e917";
-$ds-icon-email: "\e918";
-$ds-icon-emoji: "\e919";
-$ds-icon-exit: "\e91a";
-$ds-icon-eye: "\e91b";
-$ds-icon-facebook: "\e91c";
-$ds-icon-favourite: "\e91d";
-$ds-icon-filter: "\e91e";
-$ds-icon-founding-path1: "\e91f";
-$ds-icon-founding-path2: "\e920";
-$ds-icon-gift: "\e921";
-$ds-icon-instagram: "\e922";
-$ds-icon-iron: "\e923";
-$ds-icon-list: "\e924";
-$ds-icon-logo-path1: "\e925";
-$ds-icon-logo-path2: "\e926";
-$ds-icon-logo-path3: "\e927";
-$ds-icon-logo-path4: "\e928";
-$ds-icon-logo-path5: "\e929";
-$ds-icon-logo-path6: "\e92a";
-$ds-icon-menu: "\e92b";
-$ds-icon-moto: "\e92c";
-$ds-icon-nonspikes: "\e92d";
-$ds-icon-notify: "\e92e";
-$ds-icon-oil: "\e92f";
-$ds-icon-phone: "\e930";
-$ds-icon-phonehandset: "\e931";
-$ds-icon-phone-nobg: "\e932";
-$ds-icon-photo: "\e933";
-$ds-icon-placemark: "\e934";
-$ds-icon-plane: "\e935";
-$ds-icon-points: "\e936";
-$ds-icon-readmore: "\e937";
-$ds-icon-readmore-reversed: "\e938";
-$ds-icon-readmore-right: "\e939";
-$ds-icon-repair: "\e93a";
-$ds-icon-reviews: "\e93b";
-$ds-icon-scales: "\e93c";
-$ds-icon-search: "\e93d";
-$ds-icon-services: "\e93e";
-$ds-icon-services-aircond: "\e93f";
-$ds-icon-services-store: "\e940";
-$ds-icon-services-tires: "\e941";
-$ds-icon-services-vin: "\e942";
-$ds-icon-services-wheel-painted: "\e943";
-$ds-icon-services-wheel-rolled: "\e944";
-$ds-icon-settings: "\e945";
-$ds-icon-share: "\e946";
-$ds-icon-shield: "\e947";
-$ds-icon-spikes: "\e948";
-$ds-icon-steel-path1: "\e949";
-$ds-icon-steel-path2: "\e94a";
-$ds-icon-summer: "\e94b";
-$ds-icon-target: "\e94c";
-$ds-icon-tg: "\e94d";
-$ds-icon-tg-filled: "\e94e";
-$ds-icon-tile: "\e94f";
-$ds-icon-time: "\e950";
-$ds-icon-tires: "\e951";
-$ds-icon-tool: "\e952";
-$ds-icon-trash: "\e953";
-$ds-icon-user: "\e954";
-$ds-icon-view: "\e955";
-$ds-icon-vk: "\e956";
-$ds-icon-wallet: "\e957";
-$ds-icon-wapp: "\e958";
-$ds-icon-wapp-filled: "\e959";
-$ds-icon-warranty: "\e95a";
-$ds-icon-wheels: "\e95b";
-$ds-icon-winter: "\e95c";
-$ds-icon-youtube: "\e95d";
-$ds-icon-zoom: "\e95e";
+$ds-icon-drive2: "\e916";
+$ds-icon-drive2-filled: "\e917";
+$ds-icon-dropdown: "\e918";
+$ds-icon-edit: "\e919";
+$ds-icon-email: "\e91a";
+$ds-icon-emoji: "\e91b";
+$ds-icon-exit: "\e91c";
+$ds-icon-eye: "\e91d";
+$ds-icon-facebook: "\e91e";
+$ds-icon-facebook-filled: "\e91f";
+$ds-icon-favourite: "\e920";
+$ds-icon-filter: "\e921";
+$ds-icon-founding-path1: "\e922";
+$ds-icon-founding-path2: "\e923";
+$ds-icon-gift: "\e924";
+$ds-icon-instagram: "\e925";
+$ds-icon-instagram-filled: "\e926";
+$ds-icon-iron: "\e927";
+$ds-icon-list: "\e928";
+$ds-icon-logo-path1: "\e929";
+$ds-icon-logo-path2: "\e92a";
+$ds-icon-logo-path3: "\e92b";
+$ds-icon-logo-path4: "\e92c";
+$ds-icon-logo-path5: "\e92d";
+$ds-icon-logo-path6: "\e92e";
+$ds-icon-menu: "\e92f";
+$ds-icon-moto: "\e930";
+$ds-icon-nonspikes: "\e931";
+$ds-icon-notify: "\e932";
+$ds-icon-oil: "\e933";
+$ds-icon-phone: "\e934";
+$ds-icon-phonehandset: "\e935";
+$ds-icon-phone-nobg: "\e936";
+$ds-icon-photo: "\e937";
+$ds-icon-placemark: "\e938";
+$ds-icon-plane: "\e939";
+$ds-icon-points: "\e93a";
+$ds-icon-readmore: "\e93b";
+$ds-icon-readmore-reversed: "\e93c";
+$ds-icon-readmore-right: "\e93d";
+$ds-icon-repair: "\e93e";
+$ds-icon-reviews: "\e93f";
+$ds-icon-scales: "\e940";
+$ds-icon-search: "\e941";
+$ds-icon-services: "\e942";
+$ds-icon-services-aircond: "\e943";
+$ds-icon-services-store: "\e944";
+$ds-icon-services-tires: "\e945";
+$ds-icon-services-vin: "\e946";
+$ds-icon-services-wheel-painted: "\e947";
+$ds-icon-services-wheel-rolled: "\e948";
+$ds-icon-settings: "\e949";
+$ds-icon-share: "\e94a";
+$ds-icon-shield: "\e94b";
+$ds-icon-spikes: "\e94c";
+$ds-icon-steel-path1: "\e94d";
+$ds-icon-steel-path2: "\e94e";
+$ds-icon-summer: "\e94f";
+$ds-icon-target: "\e950";
+$ds-icon-tg: "\e951";
+$ds-icon-tg-filled: "\e952";
+$ds-icon-tile: "\e953";
+$ds-icon-time: "\e954";
+$ds-icon-tires: "\e955";
+$ds-icon-tool: "\e956";
+$ds-icon-trash: "\e957";
+$ds-icon-twitter: "\e958";
+$ds-icon-twitter-filled: "\e959";
+$ds-icon-user: "\e95a";
+$ds-icon-view: "\e95b";
+$ds-icon-vk: "\e95c";
+$ds-icon-vk-filled: "\e95d";
+$ds-icon-wallet: "\e95e";
+$ds-icon-wapp: "\e95f";
+$ds-icon-wapp-filled: "\e960";
+$ds-icon-warranty: "\e961";
+$ds-icon-wheels: "\e962";
+$ds-icon-winter: "\e963";
+$ds-icon-youtube: "\e964";
+$ds-icon-youtube-filled: "\e965";
+$ds-icon-zoom: "\e966";
