support/дополнить сет иконок

--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -197,6 +197,18 @@ block wrapper
           +svg('drive2-filled')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('drive2')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('moto-back')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('moto-front')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('resize')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('cylinder')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('wheel-hot')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('wheel-drop')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -398,5 +410,17 @@ block wrapper
           span.h1.ds-icon-drive2-filled
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-drive2
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-moto-back
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-moto-front
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-resize
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-cylinder
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-wheel-hot
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-wheel-drop
 
 block footer
