--- a/src/scss/icons/style.scss
+++ b/src/scss/icons/style.scss
@@ -566,3 +566,33 @@
     content: $ds-icon-zoom;
   }
 }
+.ds-icon-wheel-drop {
+  &:before {
+    content: $ds-icon-wheel-drop;
+  }
+}
+.ds-icon-wheel-hot {
+  &:before {
+    content: $ds-icon-wheel-hot;
+  }
+}
+.ds-icon-moto-back {
+  &:before {
+    content: $ds-icon-moto-back;
+  }
+}
+.ds-icon-moto-front {
+  &:before {
+    content: $ds-icon-moto-front;
+  }
+}
+.ds-icon-cylinder {
+  &:before {
+    content: $ds-icon-cylinder;
+  }
+}
+.ds-icon-resize {
+  &:before {
+    content: $ds-icon-resize;
+  }
+}
